--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,5 @@
 <body>
     <div id="app"></div>
 </body>
-<script src="../dist/bundle.js" type="text/javascript"></script>
+<script src="bundle.js" type="text/javascript"></script>
 </html>
